--- a/scgapi/pom.xml
+++ b/scgapi/pom.xml
@@ -77,5 +77,49 @@
                 <artifactId>jackson-datatype-jsr310</artifactId>
                 <version>2.6.7</version>
             </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.hamcrest</groupId>
+            <artifactId>hamcrest-core</artifactId>
+            <version>1.3</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+            <scope>test</scope>
+            <type>jar</type>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+              <groupId>org.apache.maven.plugins</groupId>
+              <artifactId>maven-failsafe-plugin</artifactId>
+              <version>2.20</version>
+              <configuration>
+                  <groups>com.syniverse.scgapi.integration.helper.IntegrationTest</groups>
+              </configuration>
+              <executions>
+                <execution>
+                  <goals>
+                    <goal>integration-test</goal>
+                    <goal>verify</goal>
+                  </goals>
+                  <configuration>
+                      <includes>
+                          <include>**/*.class</include>
+                      </includes>
+                 </configuration>
+                </execution>
+              </executions>
+            </plugin>
+      </plugins>
+    </build>
 </project>
